[package]
name = "esp-miner"
version = "0.1.0"
authors = ["Georges PALAUQUI <g.palauqui@gptechinno.com>"]
edition = "2021"
rust-version = "1.67.0"
description = "Rust based firmware for BitaxeMax"
repository = "https://github.com/skot/ESP-Miner"
license = "MIT OR Apache-2.0"

keywords = ["embedded", "embedded-hal", "esp", "esp32s3", "no-std"]
categories = ["embedded", "no-std", "bitcoin"]

[dependencies]
embassy-executor = { version = "0.2.0", features = [
    "nightly",
    "integrated-timers",
    "arch-xtensa",
    "executor-thread",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-sync = { version = "0.2.0" }
embassy-time = { version = "0.1.1", package = "embassy-time", features = [
    "nightly",
    "tick-hz-1_000_000",
] }
embedded-io = "0.4.0"
embedded-svc = { version = "0.24.0", default-features = false, features = [] }
emc2101 = { version = "0.2.1", default-features = false, features = ["async"] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", rev = "c4461779", features = [
    "async",
    "embassy-net",
    "embedded-svc",
    "esp32s3",
    "wifi",
] }
esp32s3-hal = { version = "0.11.0", package = "esp32s3-hal", features = [
    "embassy",
    "embassy-time-timg0",
    "async",
    "rt",
] }
fugit = "0.3.6"
static_cell = "1.0.0"
log = "0.4.18"

[features]
default = ["emc2101-tach"]
generate-clki = []
emc2101-tach = []
emc2101-alert = []

[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"

[profile.dev.package.esp-wifi]
opt-level = 3
