idf_component_register(
SRCS 
    "bm1368.c"
    "bm1366.c"
    "bm1397.c" 
    "serial.c"  
    "crc.c"
INCLUDE_DIRS 
    "include"
REQUIRES 
    freertos 
    driver 
    stratum
)


# Include the header files from "main" directory
target_include_directories(${COMPONENT_LIB} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../../main")

# Include the header files from "main/tasks" directory
target_include_directories(${COMPONENT_LIB} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../../main/tasks")